fix example footer overflow

--- a/projectroles/static/projectroles/css/projectroles.css
+++ b/projectroles/static/projectroles/css/projectroles.css
@@ -160,7 +160,7 @@ div.omics-page-container {
   width: 100%;
   height: 36px;
   line-height: 36px;
-  margin-top: 0;
+  margin: 0;
   background-color: #f5f5f5;
 }
 
